prover-ray/zkcdriver/testdata/synced/invalid/fixed_array_17.zkc
//error:2:14-15:unknown symbol
const C:u8=1+x

fn f12345(xs:[u8;C]) -> (r:u8) {
  r = xs[0]
}
